# GFG-Practice

./: .gitignore  .pre-commit-config.yaml  README.md  Rearrange-Array-Alternately.py  Transpose-Array-InPlace.py  buy_and_sell_one_transaction.py  find_extra_element.py  linked_list.py  pyproject.toml  reverse_linked_list.py  single_number.py  stock_span_problem.py  transition_point.py  transpose_array_in_place.py
.github/workflows/: ci.yml
arrays/: buy_and_sell_one_transaction.py  rearrange_array_alternately.py  single_number.py  stock_span_problem.py  transpose_array_in_place.py
arrays/tests/: test_buy_and_sell_one_transaction.py  test_rearrange_array_alternately.py  test_single_number.py  test_stock_span_problem.py  test_transpose_array_in_place.py
docs/: make.bat
docs/source/: conf.py  index.rst
linked_list/: linked_list.py
math/: missing_element_of_AP.py
tests/: test_buy_and_sell_one_transaction.py  test_find_extra_element.py  test_missing_element_of_AP.py  test_stock_span_problem.py  test_transition_point.py  test_transpose_array_in_place.py
