[project]
name = "gfg-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types>=0.7.0",
]

[dependency-groups]
dev = [
    "coverage>=7.13.1",
    "sphinx>=9.1.0",
    "sphinx-autobuild>=2025.8.25",
]

[tool.ruff.lint]
extend-select = ["W"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[toll.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true
